analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BARRAINVERTIDA
    BREAK
    COMILLAS
    COMMENTBLOCK
    CONTINUE
    NULL
    RETURN

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir PUNTOCOMA
Rule 5     instruccion -> declaracion PUNTOCOMA
Rule 6     instruccion -> asignacion PUNTOCOMA
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> if_else_instr
Rule 9     instruccion -> if_elseif_instr
Rule 10    instruccion -> if_elseif_else_instr
Rule 11    instruccion -> for_instr
Rule 12    instruccion -> while_instr
Rule 13    instruccion -> switch_instr
Rule 14    instruccion -> llamada_funcion_nativa PUNTOCOMA
Rule 15    instruccion -> funcion_instr
Rule 16    instruccion -> call_funcion_instr PUNTOCOMA
Rule 17    instruccion -> interface_instr
Rule 18    instruccion -> delaracion_struct
Rule 19    tipodeclaracion -> LET
Rule 20    tipodeclaracion -> VAR
Rule 21    tipodeclaracion -> CONST
Rule 22    tipovar -> NUMBER
Rule 23    tipovar -> FLOAT
Rule 24    tipovar -> STRING
Rule 25    tipovar -> BOOLEAN
Rule 26    tipovar -> CHAR
Rule 27    tipovar -> NUMBER CORCHETEI CORCHETED
Rule 28    tipovar -> FLOAT CORCHETEI CORCHETED
Rule 29    tipovar -> STRING CORCHETEI CORCHETED
Rule 30    tipovar -> BOOLEAN CORCHETEI CORCHETED
Rule 31    tipovar -> CHAR CORCHETEI CORCHETED
Rule 32    imprimir -> CONSOLE PUNTO LOG PARENI listaExpresiones PAREND
Rule 33    listaExpresiones -> listaExpresiones COMA expresion
Rule 34    listaExpresiones -> expresion
Rule 35    arraylist -> CORCHETEI listaExpresiones CORCHETED
Rule 36    arraylist -> CORCHETEI CORCHETED
Rule 37    expresion -> arraylist
Rule 38    declaracion -> tipodeclaracion ID DOSPUNTOS tipovar IGUAL expresion
Rule 39    declaracion -> tipodeclaracion ID IGUAL expresion
Rule 40    declaracion -> tipodeclaracion ID DOSPUNTOS tipovar
Rule 41    asignacion -> ID IGUAL expresion
Rule 42    asignacion -> ID CORCHETEI expresion CORCHETED IGUAL expresion
Rule 43    asignacion -> ID AUMENTO expresion
Rule 44    asignacion -> ID DECREMENTO expresion
Rule 45    listaIf -> listaIf elseIF
Rule 46    listaIf -> elseIF
Rule 47    elseIF -> ELSE if_instr
Rule 48    if_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED
Rule 49    if_else_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED ELSE LLAVEI instrucciones LLAVED
Rule 50    if_elseif_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf
Rule 51    if_elseif_else_instr -> IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf ELSE LLAVEI instrucciones LLAVED
Rule 52    actualizacion -> ID INCREMENTOFOR
Rule 53    actualizacion -> ID DECREMENTOFOR
Rule 54    for_instr -> FOR PARENI declaracion PUNTOCOMA expresion PUNTOCOMA actualizacion PAREND LLAVEI instrucciones LLAVED
Rule 55    for_instr -> FOR PARENI tipodeclaracion ID OF ID PAREND LLAVEI instrucciones LLAVED
Rule 56    while_instr -> WHILE PARENI expresion PAREND LLAVEI instrucciones LLAVED
Rule 57    listaCases -> listaCases case
Rule 58    listaCases -> case
Rule 59    case -> CASE expresion DOSPUNTOS instrucciones
Rule 60    case -> DEFAULT DOSPUNTOS instrucciones
Rule 61    switch_instr -> SWITCH PARENI expresion PAREND LLAVEI listaCases LLAVED
Rule 62    nativa_sin_parametros -> POP PARENI PAREND
Rule 63    nativa_sin_parametros -> JOIN PARENI PAREND
Rule 64    nativa_sin_parametros -> TSTRING PARENI PAREND
Rule 65    nativa_sin_parametros -> LC PARENI PAREND
Rule 66    nativa_sin_parametros -> UC PARENI PAREND
Rule 67    nativa_sin_parametros -> LENGTH
Rule 68    llamada_funcion_nativa -> PUSH
Rule 69    llamada_funcion_nativa -> INDEXOF
Rule 70    llamada_funcion_nativa -> expresion PUNTO nativa_sin_parametros
Rule 71    llamada_funcion_nativa -> expresion PUNTO llamada_funcion_nativa PARENI listaExpresiones PAREND
Rule 72    llamada_funcion_nativa -> TYPEOF expresion
Rule 73    expresion -> llamada_funcion_nativa
Rule 74    expresion -> TOINT PARENI expresion PAREND
Rule 75    expresion -> TOFLOAT PARENI expresion PAREND
Rule 76    parametros_funcion -> parametros_funcion COMA parametro_funcion
Rule 77    parametros_funcion -> parametro_funcion
Rule 78    parametro_funcion -> ID DOSPUNTOS tipovar
Rule 79    parametro_funcion -> ID DOSPUNTOS tipovar CORCHETEI CORCHETED
Rule 80    call_funcion_instr -> ID PARENI PAREND
Rule 81    call_funcion_instr -> ID PARENI listaExpresiones PAREND
Rule 82    funcion_instr -> FUNCTION ID PARENI parametros_funcion PAREND LLAVEI instrucciones LLAVED
Rule 83    funcion_instr -> FUNCTION ID PARENI PAREND LLAVEI instrucciones LLAVED
Rule 84    interface_instr -> INTERFACE ID LLAVEI interface_params PUNTOCOMA LLAVED
Rule 85    interface_params -> interface_params PUNTOCOMA ID DOSPUNTOS tipovar
Rule 86    interface_params -> ID DOSPUNTOS tipovar
Rule 87    delaracion_struct -> expresion PUNTO expresion IGUAL expresion PUNTOCOMA
Rule 88    expresion -> expresion PUNTO expresion
Rule 89    expresion -> call_funcion_instr
Rule 90    expresion -> expresion MAS expresion
Rule 91    expresion -> expresion MENOS expresion
Rule 92    expresion -> expresion POR expresion
Rule 93    expresion -> expresion DIVIDIDO expresion
Rule 94    expresion -> expresion MOD expresion
Rule 95    expresion -> expresion MENORQ expresion
Rule 96    expresion -> expresion MAYORQ expresion
Rule 97    expresion -> expresion MAYORIGUALQ expresion
Rule 98    expresion -> expresion MENORIGUALQ expresion
Rule 99    expresion -> expresion IGUALIGUAL expresion
Rule 100   expresion -> expresion DIFERENTE expresion
Rule 101   expresion -> expresion AND expresion
Rule 102   expresion -> expresion OR expresion
Rule 103   expresion -> NOT expresion
Rule 104   expresion -> PARENI expresion PAREND
Rule 105   expresion -> ENTERO
Rule 106   expresion -> DECIMAL
Rule 107   expresion -> FALSE
Rule 108   expresion -> TRUE
Rule 109   expresion -> CADENA
Rule 110   expresion -> CARACTER
Rule 111   expresion -> ID
Rule 112   expresion -> VACIO
Rule 113   expresion -> ID CORCHETEI expresion CORCHETED
Rule 114   expresion -> MENOS expresion

Terminals, with rules where they appear

AND                  : 101
AUMENTO              : 43
BARRAINVERTIDA       : 
BOOLEAN              : 25 30
BREAK                : 
CADENA               : 109
CARACTER             : 110
CASE                 : 59
CHAR                 : 26 31
COMA                 : 33 76
COMILLAS             : 
COMMENTBLOCK         : 
CONSOLE              : 32
CONST                : 21
CONTINUE             : 
CORCHETED            : 27 28 29 30 31 35 36 42 79 113
CORCHETEI            : 27 28 29 30 31 35 36 42 79 113
DECIMAL              : 106
DECREMENTO           : 44
DECREMENTOFOR        : 53
DEFAULT              : 60
DIFERENTE            : 100
DIVIDIDO             : 93
DOSPUNTOS            : 38 40 59 60 78 79 85 86
ELSE                 : 47 49 51
ENTERO               : 105
FALSE                : 107
FLOAT                : 23 28
FOR                  : 54 55
FUNCTION             : 82 83
ID                   : 38 39 40 41 42 43 44 52 53 55 55 78 79 80 81 82 83 84 85 86 111 113
IF                   : 48 49 50 51
IGUAL                : 38 39 41 42 87
IGUALIGUAL           : 99
INCREMENTOFOR        : 52
INDEXOF              : 69
INTERFACE            : 84
JOIN                 : 63
LC                   : 65
LENGTH               : 67
LET                  : 19
LLAVED               : 48 49 49 50 51 51 54 55 56 61 82 83 84
LLAVEI               : 48 49 49 50 51 51 54 55 56 61 82 83 84
LOG                  : 32
MAS                  : 90
MAYORIGUALQ          : 97
MAYORQ               : 96
MENORIGUALQ          : 98
MENORQ               : 95
MENOS                : 91 114
MOD                  : 94
NOT                  : 103
NULL                 : 
NUMBER               : 22 27
OF                   : 55
OR                   : 102
PAREND               : 32 48 49 50 51 54 55 56 61 62 63 64 65 66 71 74 75 80 81 82 83 104
PARENI               : 32 48 49 50 51 54 55 56 61 62 63 64 65 66 71 74 75 80 81 82 83 104
POP                  : 62
POR                  : 92
PUNTO                : 32 70 71 87 88
PUNTOCOMA            : 4 5 6 14 16 54 54 84 85 87
PUSH                 : 68
RETURN               : 
STRING               : 24 29
SWITCH               : 61
TOFLOAT              : 75
TOINT                : 74
TRUE                 : 108
TSTRING              : 64
TYPEOF               : 72
UC                   : 66
VACIO                : 112
VAR                  : 20
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

actualizacion        : 54
arraylist            : 37
asignacion           : 6
call_funcion_instr   : 16 89
case                 : 57 58
declaracion          : 5 54
delaracion_struct    : 18
elseIF               : 45 46
expresion            : 33 34 38 39 41 42 42 43 44 48 49 50 51 54 56 59 61 70 71 72 74 75 87 87 87 88 88 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 104 113 114
for_instr            : 11
funcion_instr        : 15
if_else_instr        : 8
if_elseif_else_instr : 10
if_elseif_instr      : 9
if_instr             : 7 47
imprimir             : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 48 49 49 50 51 51 54 55 56 59 60 82 83
interface_instr      : 17
interface_params     : 84 85
listaCases           : 57 61
listaExpresiones     : 32 33 35 71 81
listaIf              : 45 50 51
llamada_funcion_nativa : 14 71 73
nativa_sin_parametros : 70
parametro_funcion    : 76 77
parametros_funcion   : 76 82
switch_instr         : 13
tipodeclaracion      : 38 39 40 55
tipovar              : 38 40 78 79 85 86
while_instr          : 12

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir PUNTOCOMA
    (5) instruccion -> . declaracion PUNTOCOMA
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . if_elseif_instr
    (10) instruccion -> . if_elseif_else_instr
    (11) instruccion -> . for_instr
    (12) instruccion -> . while_instr
    (13) instruccion -> . switch_instr
    (14) instruccion -> . llamada_funcion_nativa PUNTOCOMA
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . call_funcion_instr PUNTOCOMA
    (17) instruccion -> . interface_instr
    (18) instruccion -> . delaracion_struct
    (32) imprimir -> . CONSOLE PUNTO LOG PARENI listaExpresiones PAREND
    (38) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar IGUAL expresion
    (39) declaracion -> . tipodeclaracion ID IGUAL expresion
    (40) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar
    (41) asignacion -> . ID IGUAL expresion
    (42) asignacion -> . ID CORCHETEI expresion CORCHETED IGUAL expresion
    (43) asignacion -> . ID AUMENTO expresion
    (44) asignacion -> . ID DECREMENTO expresion
    (48) if_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (49) if_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED ELSE LLAVEI instrucciones LLAVED
    (50) if_elseif_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf
    (51) if_elseif_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf ELSE LLAVEI instrucciones LLAVED
    (54) for_instr -> . FOR PARENI declaracion PUNTOCOMA expresion PUNTOCOMA actualizacion PAREND LLAVEI instrucciones LLAVED
    (55) for_instr -> . FOR PARENI tipodeclaracion ID OF ID PAREND LLAVEI instrucciones LLAVED
    (56) while_instr -> . WHILE PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (61) switch_instr -> . SWITCH PARENI expresion PAREND LLAVEI listaCases LLAVED
    (68) llamada_funcion_nativa -> . PUSH
    (69) llamada_funcion_nativa -> . INDEXOF
    (70) llamada_funcion_nativa -> . expresion PUNTO nativa_sin_parametros
    (71) llamada_funcion_nativa -> . expresion PUNTO llamada_funcion_nativa PARENI listaExpresiones PAREND
    (72) llamada_funcion_nativa -> . TYPEOF expresion
    (82) funcion_instr -> . FUNCTION ID PARENI parametros_funcion PAREND LLAVEI instrucciones LLAVED
    (83) funcion_instr -> . FUNCTION ID PARENI PAREND LLAVEI instrucciones LLAVED
    (80) call_funcion_instr -> . ID PARENI PAREND
    (81) call_funcion_instr -> . ID PARENI listaExpresiones PAREND
    (84) interface_instr -> . INTERFACE ID LLAVEI interface_params PUNTOCOMA LLAVED
    (87) delaracion_struct -> . expresion PUNTO expresion IGUAL expresion PUNTOCOMA
    (19) tipodeclaracion -> . LET
    (20) tipodeclaracion -> . VAR
    (21) tipodeclaracion -> . CONST
    (37) expresion -> . arraylist
    (73) expresion -> . llamada_funcion_nativa
    (74) expresion -> . TOINT PARENI expresion PAREND
    (75) expresion -> . TOFLOAT PARENI expresion PAREND
    (88) expresion -> . expresion PUNTO expresion
    (89) expresion -> . call_funcion_instr
    (90) expresion -> . expresion MAS expresion
    (91) expresion -> . expresion MENOS expresion
    (92) expresion -> . expresion POR expresion
    (93) expresion -> . expresion DIVIDIDO expresion
    (94) expresion -> . expresion MOD expresion
    (95) expresion -> . expresion MENORQ expresion
    (96) expresion -> . expresion MAYORQ expresion
    (97) expresion -> . expresion MAYORIGUALQ expresion
    (98) expresion -> . expresion MENORIGUALQ expresion
    (99) expresion -> . expresion IGUALIGUAL expresion
    (100) expresion -> . expresion DIFERENTE expresion
    (101) expresion -> . expresion AND expresion
    (102) expresion -> . expresion OR expresion
    (103) expresion -> . NOT expresion
    (104) expresion -> . PARENI expresion PAREND
    (105) expresion -> . ENTERO
    (106) expresion -> . DECIMAL
    (107) expresion -> . FALSE
    (108) expresion -> . TRUE
    (109) expresion -> . CADENA
    (110) expresion -> . CARACTER
    (111) expresion -> . ID
    (112) expresion -> . VACIO
    (113) expresion -> . ID CORCHETEI expresion CORCHETED
    (114) expresion -> . MENOS expresion
    (35) arraylist -> . CORCHETEI listaExpresiones CORCHETED
    (36) arraylist -> . CORCHETEI CORCHETED

    CONSOLE         shift and go to state 19
    ID              shift and go to state 22
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    SWITCH          shift and go to state 28
    PUSH            shift and go to state 29
    INDEXOF         shift and go to state 30
    TYPEOF          shift and go to state 31
    FUNCTION        shift and go to state 32
    INTERFACE       shift and go to state 33
    LET             shift and go to state 34
    VAR             shift and go to state 35
    CONST           shift and go to state 36
    TOINT           shift and go to state 38
    TOFLOAT         shift and go to state 39
    NOT             shift and go to state 41
    PARENI          shift and go to state 20
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    FALSE           shift and go to state 44
    TRUE            shift and go to state 45
    CADENA          shift and go to state 46
    CARACTER        shift and go to state 47
    VACIO           shift and go to state 48
    MENOS           shift and go to state 40
    CORCHETEI       shift and go to state 24

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    if_elseif_instr                shift and go to state 9
    if_elseif_else_instr           shift and go to state 10
    for_instr                      shift and go to state 11
    while_instr                    shift and go to state 12
    switch_instr                   shift and go to state 13
    llamada_funcion_nativa         shift and go to state 14
    funcion_instr                  shift and go to state 15
    call_funcion_instr             shift and go to state 16
    interface_instr                shift and go to state 17
    delaracion_struct              shift and go to state 18
    tipodeclaracion                shift and go to state 21
    expresion                      shift and go to state 23
    arraylist                      shift and go to state 37

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir PUNTOCOMA
    (5) instruccion -> . declaracion PUNTOCOMA
    (6) instruccion -> . asignacion PUNTOCOMA
    (7) instruccion -> . if_instr
    (8) instruccion -> . if_else_instr
    (9) instruccion -> . if_elseif_instr
    (10) instruccion -> . if_elseif_else_instr
    (11) instruccion -> . for_instr
    (12) instruccion -> . while_instr
    (13) instruccion -> . switch_instr
    (14) instruccion -> . llamada_funcion_nativa PUNTOCOMA
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . call_funcion_instr PUNTOCOMA
    (17) instruccion -> . interface_instr
    (18) instruccion -> . delaracion_struct
    (32) imprimir -> . CONSOLE PUNTO LOG PARENI listaExpresiones PAREND
    (38) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar IGUAL expresion
    (39) declaracion -> . tipodeclaracion ID IGUAL expresion
    (40) declaracion -> . tipodeclaracion ID DOSPUNTOS tipovar
    (41) asignacion -> . ID IGUAL expresion
    (42) asignacion -> . ID CORCHETEI expresion CORCHETED IGUAL expresion
    (43) asignacion -> . ID AUMENTO expresion
    (44) asignacion -> . ID DECREMENTO expresion
    (48) if_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (49) if_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED ELSE LLAVEI instrucciones LLAVED
    (50) if_elseif_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf
    (51) if_elseif_else_instr -> . IF PARENI expresion PAREND LLAVEI instrucciones LLAVED listaIf ELSE LLAVEI instrucciones LLAVED
    (54) for_instr -> . FOR PARENI declaracion PUNTOCOMA expresion PUNTOCOMA actualizacion PAREND LLAVEI instrucciones LLAVED
    (55) for_instr -> . FOR PARENI tipodeclaracion ID OF ID PAREND LLAVEI instrucciones LLAVED
    (56) while_instr -> . WHILE PARENI expresion PAREND LLAVEI instrucciones LLAVED
    (61) switch_instr -> . SWITCH PARENI expresion PAREND LLAVEI listaCases LLAVED
    (68) llamada_funcion_nativa -> . PUSH
    (69) llamada_funcion_nativa -> . INDEXOF
    (70) llamada_funcion_nativa -> . expresion PUNTO nativa_sin_parametros
    (71) llamada_funcion_nativa -> . expresion PUNTO llamada_funcion_nativa PARENI listaExpresiones PAREND
    (72) llamada_funcion_nativa -> . TYPEOF expresion
    (82) funcion_instr -> . FUNCTION ID PARENI parametros_funcion PAREND LLAVEI instrucciones LLAVED
    (83) funcion_instr -> . FUNCTION ID PARENI PAREND LLAVEI instrucciones LLAVED
    (80) call_funcion_instr -> . ID PARENI PAREND
    (81) call_funcion_instr -> . ID PARENI listaExpresiones PAREND
    (84) interface_instr -> . INTERFACE ID LLAVEI interface_params PUNTOCOMA LLAVED
    (87) delaracion_struct -> . expresion PUNTO expresion IGUAL expresion PUNTOCOMA
    (19) tipodeclaracion -> . LET
    (20) tipodeclaracion -> . VAR
    (21) tipodeclaracion -> . CONST
    (37) expresion -> . arraylist
    (73) expresion -> . llamada_funcion_nativa
    (74) expresion -> . TOINT PARENI expresion PAREND
    (75) expresion -> . TOFLOAT PARENI expresion PAREND
    (88) expresion -> . expresion PUNTO expresion
    (89) expresion -> . call_funcion_instr
    (90) expresion -> . expresion MAS expresion
    (91) expresion -> . expresion MENOS expresion
    (92) expresion -> . expresion POR expresion
    (93) expresion -> . expresion DIVIDIDO expresion
    (94) expresion -> . expresion MOD expresion
    (95) expresion -> . expresion MENORQ expresion
    (96) expresion -> . expresion MAYORQ expresion
    (97) expresion -> . expresion MAYORIGUALQ expresion
    (98) expresion -> . expresion MENORIGUALQ expresion
    (99) expresion -> . expresion IGUALIGUAL expresion
    (100) expresion -> . expresion DIFERENTE expresion
    (101) expresion -> . expresion AND expresion
    (102) expresion -> . expresion OR expresion
    (103) expresion -> . NOT expresion
    (104) expresion -> . PARENI expresion PAREND
    (105) expresion -> . ENTERO
    (106) expresion -> . DECIMAL
    (107) expresion -> . FALSE
    (108) expresion -> . TRUE
    (109) expresion -> . CADENA
    (110) expresion -> . CARACTER
    (111) expresion -> . ID
    (112) expresion -> . VACIO
    (113) expresion -> . ID CORCHETEI expresion CORCHETED
    (114) expresion -> . MENOS expresion
    (35) arraylist -> . CORCHETEI listaExpresiones CORCHETED
    (36) arraylist -> . CORCHETEI CORCHETED

    $end            reduce using rule 1 (init -> instrucciones .)
    CONSOLE         shift and go to state 19
    ID              shift and go to state 22
    IF              shift and go to state 25
    FOR             shift and go to state 26
    WHILE           shift and go to state 27
    SWITCH          shift and go to state 28
    PUSH            shift and go to state 29
    INDEXOF         shift and go to state 30
    TYPEOF          shift and go to state 31
    FUNCTION        shift and go to state 32
    INTERFACE       shift and go to state 33
    LET             shift and go to state 34
    VAR             shift and go to state 35
    CONST           shift and go to state 36
    TOINT           shift and go to state 38
    TOFLOAT         shift and go to state 39
    NOT             shift and go to state 41
    PARENI          shift and go to state 20
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    FALSE           shift and go to state 44
    TRUE            shift and go to state 45
    CADENA          shift and go to state 46
    CARACTER        shift and go to state 47
    VACIO           shift and go to state 48
    MENOS           shift and go to state 40
    CORCHETEI       shift and go to state 24

    instruccion                    shift and go to state 49
    imprimir                       shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    if_instr                       shift and go to state 7
    if_else_instr                  shift and go to state 8
    if_elseif_instr                shift and go to state 9
    if_elseif_else_instr           shift and go to state 10
    for_instr                      shift and go to state 11
    while_instr                    shift and go to state 12
    switch_instr                   shift and go to state 13
    llamada_funcion_nativa         shift and go to state 14
    funcion_instr                  shift and go to state 15
    call_funcion_instr             shift and go to state 16
    interface_instr                shift and go to state 17
    delaracion_struct              shift and go to state 18
    tipodeclaracion                shift and go to state 21
    expresion                      shift and go to state 23
    arraylist                      shift and go to state 37

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    SWITCH          reduce using rule 3 (instrucciones -> instruccion .)
    PUSH            reduce using rule 3 (instrucciones -> instruccion .)
    INDEXOF         reduce using rule 3 (instrucciones -> instruccion .)
    TYPEOF          reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    VAR             reduce using rule 3 (instrucciones -> instruccion .)
    CONST           reduce using rule 3 (instrucciones -> instruccion .)
    TOINT           reduce using rule 3 (instrucciones -> instruccion .)
    TOFLOAT         reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARENI          reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 3 (instrucciones -> instruccion .)
    VACIO           reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    CORCHETEI       reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVED          reduce using rule 3 (instrucciones -> instruccion .)
    CASE            reduce using rule 3 (instrucciones -> instruccion .)
    DEFAULT         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir . PUNTOCOMA

    PUNTOCOMA       shift and go to state 50


state 5

    (5) instruccion -> declaracion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 51


state 6

    (6) instruccion -> asignacion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 52


state 7

    (7) instruccion -> if_instr .

    CONSOLE         reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    IF              reduce using rule 7 (instruccion -> if_instr .)
    FOR             reduce using rule 7 (instruccion -> if_instr .)
    WHILE           reduce using rule 7 (instruccion -> if_instr .)
    SWITCH          reduce using rule 7 (instruccion -> if_instr .)
    PUSH            reduce using rule 7 (instruccion -> if_instr .)
    INDEXOF         reduce using rule 7 (instruccion -> if_instr .)
    TYPEOF          reduce using rule 7 (instruccion -> if_instr .)
    FUNCTION        reduce using rule 7 (instruccion -> if_instr .)
    INTERFACE       reduce using rule 7 (instruccion -> if_instr .)
    LET             reduce using rule 7 (instruccion -> if_instr .)
    VAR             reduce using rule 7 (instruccion -> if_instr .)
    CONST           reduce using rule 7 (instruccion -> if_instr .)
    TOINT           reduce using rule 7 (instruccion -> if_instr .)
    TOFLOAT         reduce using rule 7 (instruccion -> if_instr .)
    NOT             reduce using rule 7 (instruccion -> if_instr .)
    PARENI          reduce using rule 7 (instruccion -> if_instr .)
    ENTERO          reduce using rule 7 (instruccion -> if_instr .)
    DECIMAL         reduce using rule 7 (instruccion -> if_instr .)
    FALSE           reduce using rule 7 (instruccion -> if_instr .)
    TRUE            reduce using rule 7 (instruccion -> if_instr .)
    CADENA          reduce using rule 7 (instruccion -> if_instr .)
    CARACTER        reduce using rule 7 (instruccion -> if_instr .)
    VACIO           reduce using rule 7 (instruccion -> if_instr .)
    MENOS           reduce using rule 7 (instruccion -> if_instr .)
    CORCHETEI       reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVED          reduce using rule 7 (instruccion -> if_instr .)
    CASE            reduce using rule 7 (instruccion -> if_instr .)
    DEFAULT         reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> if_else_instr .

    CONSOLE         reduce using rule 8 (instruccion -> if_else_instr .)
    ID              reduce using rule 8 (instruccion -> if_else_instr .)
    IF              reduce using rule 8 (instruccion -> if_else_instr .)
    FOR             reduce using rule 8 (instruccion -> if_else_instr .)
    WHILE           reduce using rule 8 (instruccion -> if_else_instr .)
    SWITCH          reduce using rule 8 (instruccion -> if_else_instr .)
    PUSH            reduce using rule 8 (instruccion -> if_else_instr .)
    INDEXOF         reduce using rule 8 (instruccion -> if_else_instr .)
    TYPEOF          reduce using rule 8 (instruccion -> if_else_instr .)
    FUNCTION        reduce using rule 8 (instruccion -> if_else_instr .)
    INTERFACE       reduce using rule 8 (instruccion -> if_else_instr .)
    LET             reduce using rule 8 (instruccion -> if_else_instr .)
    VAR             reduce using rule 8 (instruccion -> if_else_instr .)
    CONST           reduce using rule 8 (instruccion -> if_else_instr .)
    TOINT           reduce using rule 8 (instruccion -> if_else_instr .)
    TOFLOAT         reduce using rule 8 (instruccion -> if_else_instr .)
    NOT             reduce using rule 8 (instruccion -> if_else_instr .)
    PARENI          reduce using rule 8 (instruccion -> if_else_instr .)
    ENTERO          reduce using rule 8 (instruccion -> if_else_instr .)
    DECIMAL         reduce using rule 8 (instruccion -> if_else_instr .)
    FALSE           reduce using rule 8 (instruccion -> if_else_instr .)
    TRUE            reduce using rule 8 (instruccion -> if_else_instr .)
    CADENA          reduce using rule 8 (instruccion -> if_else_instr .)
    CARACTER        reduce using rule 8 (instruccion -> if_else_instr .)
    VACIO           reduce using rule 8 (instruccion -> if_else_instr .)
    MENOS           reduce using rule 8 (instruccion -> if_else_instr .)
    CORCHETEI       reduce using rule 8 (instruccion -> if_else_instr .)
    $end            reduce using rule 8 (instruccion -> if_else_instr .)
    LLAVED          reduce using rule 8 (instruccion -> if_else_instr .)
    CASE            reduce using rule 8 (instruccion -> if_else_instr .)
    DEFAULT         reduce using rule 8 (instruccion -> if_else_instr .)


state 9

    (9) instruccion -> if_elseif_instr .
